Administracion de usuarios completo

--- a/prjLegados/prjLegados.csproj
+++ b/prjLegados/prjLegados.csproj
@@ -195,6 +195,7 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Controllers\AdminController.cs" />
     <Compile Include="Controllers\ContainerController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\InventoryController.cs" />
@@ -202,6 +203,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Administrador.cs" />
     <Compile Include="Models\Archivo.cs" />
     <Compile Include="Models\Enlace.cs" />
     <Compile Include="Models\Inventory.cs" />
