--- a/prjLegados/packages.config
+++ b/prjLegados/packages.config
@@ -40,6 +40,7 @@
   <package id="Microsoft.Spatial" version="7.2.0" targetFramework="net452" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Modernizr" version="2.6.2" targetFramework="net452" />
+  <package id="MVCGrid.Net" version="1.0.0.61" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net452" />
   <package id="Respond" version="1.2.0" targetFramework="net452" />
   <package id="System.ComponentModel.EventBasedAsync" version="4.0.11" targetFramework="net452" />
@@ -47,6 +48,7 @@
   <package id="System.Linq.Queryable" version="4.0.0" targetFramework="net452" />
   <package id="System.Net.Requests" version="4.0.11" targetFramework="net452" />
   <package id="System.Spatial" version="5.8.2" targetFramework="net452" />
+  <package id="WebActivatorEx" version="2.0" targetFramework="net452" />
   <package id="WebGrease" version="1.5.2" targetFramework="net452" />
   <package id="WindowsAzure.Storage" version="9.1.1" targetFramework="net452" />
 </packages>
