--- a/prjLegados/Web.config
+++ b/prjLegados/Web.config
@@ -16,7 +16,7 @@
      <add name="Software"
        connectionString="Data Source=Steven-PC;Initial Catalog=Software;User ID=sa;Password=user;Integrated Security=false"
        providerName="System.Data.SqlClient" />
-     <add name="Software" connectionString="Data Source=LAPTOP-CNGULDDQ;Initial Catalog=Software;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <!--<add name="Software" connectionString="Data Source=LAPTOP-CNGULDDQ;Initial Catalog=Software;Integrated Security=True" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
   <appSettings>
     <add key="pathDirectory" value="c:\ArchivosPDF" />
