--- a/prjLegados/prjLegados.csproj
+++ b/prjLegados/prjLegados.csproj
@@ -206,6 +206,7 @@
     <Compile Include="Controllers\ContainerController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\InventoryController.cs" />
+    <Compile Include="Controllers\LogController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
     <Compile Include="Controllers\MenuController.cs" />
     <Compile Include="Controllers\UploadController.cs" />
@@ -216,6 +217,7 @@
     <Compile Include="Models\Archivo.cs" />
     <Compile Include="Models\Enlace.cs" />
     <Compile Include="Models\Inventory.cs" />
+    <Compile Include="Models\Log.cs" />
     <Compile Include="Models\Mensaje.cs" />
     <Compile Include="Models\ClsContainer.cs" />
     <Compile Include="Models\Metadata.cs" />
@@ -397,6 +399,7 @@
     <Content Include="Views\Inventory\Inventory.cshtml" />
     <Content Include="Views\Upload\Upload.cshtml" />
     <Content Include="Views\Menu\Menu.cshtml" />
+    <Content Include="Views\Log\Log.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\Upload\" />
